src/examples/errors/bad_expression_type_mix.del


def main() -> int {

    nt a = 6+6-2*2

    return;
}